--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
   "homepage": "https://github.com/ParvezHossain/node-express-mongodb-boilerplate#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1"
+    "lowdb": "^5.0.5",
+    "mongoose": "^6.3.1",
+    "morgan": "^1.10.0",
+    "nanoid": "^4.0.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
