--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^5.0.5",
+    "moment": "^2.29.4",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
+    "socket.io": "^4.5.4",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.20"
   }
 }
