--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
