redis server added

--- a/.env.copy
+++ b/.env.copy
@@ -1,2 +1,12 @@
 PORT=3000
-MONGO_PASSWORD=SECRET_PASSWORD
+MONGO_PASSWORD=SECRET
+SALT=12
+JWT_SECRET_KEY=secret
+LOG_LEVEL={
+  fatal: 0,
+  error: 1,
+  warn: 2,
+  info: 3,
+  debug: 4,
+  trace: 5,
+}
