--- a/docker-compose.backup.yml
+++ b/docker-compose.backup.yml
@@ -4,11 +4,10 @@ services:
     build: .
     ports:
       - "3000:3000"
+    volumes:
+      - ./:/app:ro
+      - /app/node_modules
     environment:
       - PORT=3000
-  redis:
-    image: redis
-    restart: unless-stopped
-    network_mode: bridge
-    expose:
-      - 6379
+    # env_file:
+    #   - ./.env
