--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    
+    - name: Debug SSH_PRIVATE_KEY
+      run: echo "${{ secrets.SSH_PRIVATE_KEY }}"
 
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
