--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,40 @@
-name: Deploy to Local Server
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  deploy:
-    name: Upload to the Linux server
+  build:
+
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Debug SSH_PRIVATE_KEY
-      run: echo "${{ secrets.SSH_PRIVATE_KEY }}"
-
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm run dev
 
-    - name: Deploy to local server
+  deploy-to-server:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Copy repository to server
       run: |
-        ssh sct@192.168.1.59 "cd /var/www/github-action/node-express-mongodb-boilerplate && git pull"
+        # Add your commands to copy the repository to your server
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        scp -r -o StrictHostKeyChecking=no . user@your_server:/path/to/destination
+        # ssh sct@192.168.1.59 "cd /var/www/github-action/node-express-mongodb-boilerplate && git pull"
