github action added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
           
       - name: Deploy to server
         run: |
-          SERVER_USER=user
-          SERVER_IP=your_server_ip
+          SERVER_USER=secrets.SSH_PRIVATE_KEY
+          SERVER_IP=192.168.1.59
           SERVER_PATH=/var/www/github-action/node-express-mongodb-boilerplate
 
           # SSH configuration options
